# hyperlab_LUATOS_V1_0

LuatOS/components/camera/: luat_camera.h
LuatOS/components/crypto/: luat_crc.c
LuatOS/components/ethernet/common/: dhcp_client.c  dns_client.c
LuatOS/components/io_queue/: luat_lib_io_queue.c
LuatOS/components/lcd/: luat_lcd.h  luat_lib_lcd.c
LuatOS/components/little_flash/src/: little_flash.c
LuatOS/components/lvgl/binding/: luat_lib_lvgl.c  luat_lib_lvgl7.c  luat_lib_lvgl_font.c
LuatOS/components/mobile/: luat_mobile.h  luat_mobile_common.c
LuatOS/components/multimedia/: luat_lib_multimedia_audio.c
LuatOS/components/network/adapter/: luat_lib_socket.c
LuatOS/demo/adc/: testAdc.lua
LuatOS/demo/can/: main.lua
LuatOS/demo/lcd/: main.lua
LuatOS/demo/uart_soft/: main.lua
LuatOS/luat/include/: luat_audio.h  luat_can.h  luat_crypto.h  luat_gpio.h  luat_i2c.h  luat_libs.h  luat_rtos.h  luat_spi.h
LuatOS/luat/modules/: luat_lib_can.c  luat_lib_uart.c  luat_main.c
luatos-soc-idf5/cloudbuild/: esp32c3-idf5.meta.json
luatos-soc-idf5/luatos/: CMakeLists.txt  main.lua  makesoc.py  remark.txt  uart_tested.lua
luatos-soc-idf5/luatos/components/ble_hyperlab/: CMakeLists.txt
luatos-soc-idf5/luatos/components/ble_hyperlab/src/: ble_controller.cpp  ble_controller.h  ble_handlers.cpp  ble_handlers.h  spiffsfile.h
luatos-soc-idf5/luatos/demo/: main.lua
luatos-soc-idf5/luatos/include/: luat_conf_bsp.h
luatos-soc-idf5/luatos/main/: CMakeLists.txt  idf5_main.cpp
luatos-soc-idf5/luatos/tools/: config.toml  disk.fs  script_tool.py
(+16 files in other folders)
